--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -168,6 +168,7 @@
     }
     &.header-navigation {
         align-items: normal;
+        transition: 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     }
 }
 
@@ -186,11 +187,13 @@
 }
 
 .btn-burger {
-    height: $base*3.75;
     outline: none;
     border: none;
     background: none;
     cursor: pointer;
+    width: 20px;
+    height: 15px;
+    padding: 0;
     &__line {
         display: block;
         height: 1px;
@@ -201,6 +204,7 @@
         &::before,
         &::after {
             content: "";
+            display: block;
             position: absolute;
             width: $base*5;
             height: 1px;
@@ -222,7 +226,29 @@
     display: none;
 }
 
+.section-header {
+    &::before {
+        position: fixed;
+        content: "";
+        width: 100%;
+        height: 100%;
+        z-index: 10;
+        display: none;
+        background: rgba(0, 0, 0, 0.5);
+        backdrop-filter: blur(4px);
+    }
+    &--active {
+        &::before {
+            display: block;
+        }
+    }
+}
+
 .header-navigation--active {
+    position: fixed;
+    width: 100%;
+    height: auto;
+    z-index: 10;
     border-radius: 0px 0px $base*17.5 $base*17.5;
     background: $color-secondary-50;
     padding: $base*10 $base*3.75 $base*15 $base*3.75;
@@ -251,7 +277,7 @@
 .header-navigation--desktop {}
 
 .header-navigation--mobile {
-    transition: all .3s;
+    //  transition: all .3s;
     display: none;
 }
 
