--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -94,6 +94,17 @@
             }
         }
     }
+    // === CHOOSE ===
+    .choose {
+        &__item {
+            &:first-child {
+                margin-right: 30px;
+            }
+            &:nth-child(n+3) {
+                margin-left: 30px;
+            }
+        }
+    }
 }
 
 @media (max-width: 900px) {
@@ -125,6 +136,35 @@
                 margin-top: 30px;
                 flex-basis: 50%;
             }
+        }
+    }
+    // === CHOOSE ===
+    .choose {
+        &__items {
+            flex-direction: column;
+            align-items: normal;
+        }
+        &__item {
+            &:first-child {
+                margin-right: 0px;
+                margin-bottom: 40px;
+            }
+            &:nth-child(n+3) {
+                margin-left: 0px;
+                margin-top: 30px;
+            }
+        }
+        .title {
+            margin-bottom: 20px;
+        }
+    }
+    // === TRUST === 
+    .trust {
+        &-wrapper {
+            padding: 65px 42px;
+        }
+        &-content {
+            //  justify-content: space-between;
         }
     }
 }
@@ -219,6 +259,16 @@
             }
         }
     }
+    // === TRUST === 
+    .trust {
+        .title {
+            font-size: 25px;
+            line-height: 35px;
+        }
+        &-info__title {
+            margin-bottom: 30px;
+        }
+    }
 }
 
 @media(max-width: 700px) {
@@ -283,6 +333,19 @@
     .assignment.section-outer {
         padding-top: $base*20;
         padding-bottom: $base*20;
+    }
+    // === TRUST === 
+    .trust {
+        &-content {
+            flex-direction: column;
+            align-items: center;
+        }
+        &-info {
+            margin-bottom: 40px;
+            &__button {
+                text-align: center;
+            }
+        }
     }
 }
 
@@ -359,6 +422,16 @@
             line-height: 28px;
         }
     }
+    // === CHOOSE ===
+    .choose {
+        &__top {
+            max-width: 192px;
+        }
+        .title {
+            font-size: 20px;
+            line-height: 28px;
+        }
+    }
 }
 
 @media (max-width: 375px) {
@@ -367,6 +440,13 @@
         .title {
             font-size: 16px;
             line-height: 20px;
+        }
+    }
+    // === TRUST === 
+    .trust {
+        .title {
+            font-size: 20px;
+            line-height: 28px;
         }
     }
 }
