--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -20,6 +20,9 @@
         margin-bottom: 20px;
     }
     .popup--trial {
+        .tab-list {
+            min-width: 160px;
+        }
         .popup {
             &-wrapper {
                 background-image: url(../images/default-images/illustration-10.png);
@@ -39,14 +42,14 @@
                 font-size: 20px;
                 line-height: 28px;
             }
-            &-tab {
-                min-width: 160px;
-            }
+            // &-tab {
+            //     min-width: 160px;
+            // }
             &-input {
                 max-width: 158px;
             }
         }
-        .popup-tab+.popup-tab {
+        .tab-list+.tab-list {
             margin-left: 10px;
         }
         &__item {
